--- a/JSONExamples/badgeAssertion.json
+++ b/JSONExamples/badgeAssertion.json
@@ -1,19 +1,19 @@
 {
     "@context": "https://w3id.org/openbadges/v1",
     "type": "Assertion",
-    "id": "http://openbadges.corductive.uk/badgeAssertion.json",
+    "id": "http://openbadges.example.uk/badgeAssertion.json",
     "uid": "abcd123",
     "recipient": {
-        "identity": "andy@corductive.uk",
+        "identity": "andy@example.uk",
         "type": "email",
         "hashed": false
     },
-    "image": "http://openbadges.corductive.uk/testBadge.png",
-    "evidence": "http://openbadges.corductive.uk/index.html",
-    "badge": "http://openbadges.corductive.uk/badgeClass.json",
+    "image": "http://openbadges.example.uk/testBadge.png",
+    "evidence": "http://openbadges.example.uk/index.html",
+    "badge": "http://openbadges.example.uk/badgeClass.json",
     "verify": {
         "type": "hosted",
-        "url": "http://openbadges.corductive.uk/badgeAssertion.json"
+        "url": "http://openbadges.example.uk/badgeAssertion.json"
     },
     "issuedOn": "2016-04-15"
 }
