--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.1.0",
   "description": "Open Badges Issuer",
   "main": "README.md",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-nunjucks-html": "^2.0.0",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.1",
+    "run-sequence": "^1.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
